care/force-app/main/default/objects/Opportunity_Location_Service__c/Opportunity_Location_Service__c.object-meta.xml
<CustomObject>
    <description>Tracks extra services associated with a location for Contract Composer</description>
    <label>Opportunity Location Service</label>
    <nameField>
        <displayFormat>OLS-{0}</displayFormat>
        <label>Opportunity Location Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Location Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>