care/force-app/main/default/objects/Opportunity_Location_Service__c/fields/Advertising_Spend__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Spend__c</fullName>
    <defaultValue>300</defaultValue>
    <description>Advertising Spend</description>
    <label>Advertising Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>