care/force-app/main/default/objects/Opportunity_Location_Service__c/fields/Composer_Service__c.field-meta.xml
<CustomField>
    <fullName>Composer_Service__c</fullName>
    <description>Composer Service</description>
    <label>Composer Service</label>
    <referenceTo>Composer_Service__c</referenceTo>
    <relationshipLabel>Opportunity Location Services</relationshipLabel>
    <relationshipName>Opportunity_Location_Services</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>