care/force-app/main/default/objects/Opportunity_Location_Service__c/fields/Opportunity_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Service_Area__c</fullName>
    <description>Opportunity Service Area</description>
    <label>Opportunity Service Area</label>
    <referenceTo>Opportunity_Service_Area__c</referenceTo>
    <relationshipLabel>Opportunity Location Services</relationshipLabel>
    <relationshipName>Opportunity_Location_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>