care/force-app/main/default/objects/Opportunity_Location_Service__c/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <defaultValue>&quot;Tier 1&quot;</defaultValue>
    <description>Pricing Tier</description>
    <label>Pricing Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Tier</valueSetName>
    </valueSet>
</CustomField>